# Razor

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: fragment_shader.glsl  vertex_shader.glsl
demos/: CMakeLists.txt  game_loop.c
include/: razor.h
include/razor/: gl.h  maths.h  memory_debugger.h
src/: razor_ecs.c  razor_ecs.h  razor_game_loop.c  razor_input.c  razor_render_objects.c  razor_render_objects.h  razor_shader.c  razor_shader.h  razor_utils.c  razor_utils.h
src/sdl/: razor_sdl_input.c  razor_sdl_input.h
tests/: CMakeLists.txt
